--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "me",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.1",
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
